--- a/styles/parallax.less
+++ b/styles/parallax.less
@@ -31,14 +31,17 @@ body, html {
 .scroll-sm {
     height: 400px;
     width: 100%;
+    padding: 15px;
 }
 
 .scroll-md {
     height: 700px;
     width: 100%;
+    padding: 15px;
 }
 
 .scroll-lg {
     height: 100vh;
     width: 100%;
+    padding: 15px;
 }
